[metadata]
author = Jörn Heissler
author_email = NOSPAM-httplink@joern.heissler.de
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = Library for parsing RFC 8288 "Link" HTTP headers
keywords =
    rfc8288
    Web Linking
license = MIT
license_files = LICENSE
long_description = file: README.rst
name = httplink
url = https://github.com/joernheissler/httplink
version = 0.1.0

[options]
include_package_data = False
packages =
    httplink
python_requires = >= 3.6
zip_safe = True

[options.package_data]
httplink =
    py.typed

[bdist_wheel]
python-tag = py3

[mypy]
no_implicit_optional = True
mypy_path = stubs
